# face-swap

./: .gitignore  README.md  face-cartoonization-video-v2.md  pipeline-architecture.md  pipeline-flow.mermaid  pyproject.toml  test-roadmap.md
docs/: avatar-teacher-poc.md  face-cartoonization-research.md  pipeline-architecture.md  pipeline-flow.mermaid  research-prompt.md  research-report.md
run/: START_HERE.md  animegan_stylize.py  animegan_video.py  avatar_teacher_poc.py  chroma_img2img_test.py  chroma_text2img_gen.py  dct_test.py  deid_cartoon.py  deid_sharpen.py  deid_track.py  flux_batch.py  flux_img2img_test.py  flux_video_test.py  requirements.txt  requirements_teacher.txt  run_deid.sh  run_probe.sh  run_sharpen.sh  run_track.sh  setup.sh  setup_venv.sh  track_probe.py
train/: README.md  caption.py  chroma_style_lora.yaml  curate.py  setup_lora.sh
